5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1593_820.log
== TEST (2019-03-28 11:13:57) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
not50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
rest = valor % 50

# Quantidade de notas de R$ 10
not10 = rest // 10

# Valor restante a ser sacado com notas menores que R$ 50
rest10 = not10 % 10

# Quantidade de notas de R$ 2
rest10 = not10 // 2

print(int(not50))
print(int(not10))
print(int(not2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 24, in <module>
    print(int(not2))
NameError: name 'not2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:14:19) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
not50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
rest = valor % 50

# Quantidade de notas de R$ 10
not10 = rest // 10

# Valor restante a ser sacado com notas menores que R$ 50
rest10 = not10 % 10

# Quantidade de notas de R$ 2
not2 = not10 // 2

print(int(not50))
print(int(not10))
print(int(not2))

-- OUTPUT:
40
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:14:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
not50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
rest = valor % 50

# Quantidade de notas de R$ 10
not10 = rest // 10

# Valor restante a ser sacado com notas menores que R$ 50
rest10 = not10 % 10

# Quantidade de notas de R$ 2
not2 = rest10 // 2

print(int(not50))
print(int(not10))
print(int(not2))

-- OUTPUT:
40
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:16:07) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
not50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
rest = valor % 50

# Quantidade de notas de R$ 10
not10 = rest // 10

# Valor restante a ser sacado com notas menores que R$ 50
rest10 = rest % 10

# Quantidade de notas de R$ 2
not2 = rest10 // 2

print(int(not50))
print(int(not10))
print(int(not2))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:16:13) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
not50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
rest = valor % 50

# Quantidade de notas de R$ 10
not10 = rest // 10

# Valor restante a ser sacado com notas menores que R$ 50
rest10 = rest % 10

# Quantidade de notas de R$ 2
not2 = rest10 // 2

print(int(not50))
print(int(not10))
print(int(not2))

-- EXECUTION TIME:
0.21484
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
